// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OneChip Snapshot 1`] = `
<View
  className="flex items-start"
>
  <View
    accessibilityLabel="Action"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="overflow-hidden flex items-center gap-1 rounded-full border border-solid border-f0-border px-2 py-0.5 grow-0"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <View
      className="absolute inset-0"
      pointerEvents="none"
      style={
        [
          {
            "opacity": 0,
          },
          {
            "backgroundColor": "rgba(0, 0, 0, 1)",
          },
        ]
      }
    />
    <View
      className="flex flex-row items-center gap-0.5"
    >
      <Text
        className="font-medium text-f0-foreground"
      >
        label
      </Text>
    </View>
  </View>
</View>
`;

exports[`OneChip Snapshot variant selected 1`] = `
<View
  className="flex items-start"
>
  <View
    accessibilityLabel="Action"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="overflow-hidden flex items-center gap-1 rounded-full border border-solid px-2 py-0.5 grow-0 border-f0-border-selected bg-f0-background-selected-secondary"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <View
      className="absolute inset-0"
      pointerEvents="none"
      style={
        [
          {
            "opacity": 0,
          },
          {
            "backgroundColor": "rgba(0, 0, 0, 1)",
          },
        ]
      }
    />
    <View
      className="flex flex-row items-center gap-0.5"
    >
      <Text
        className="font-medium text-f0-foreground-selected"
      >
        label
      </Text>
    </View>
  </View>
</View>
`;

exports[`OneChip Snapshot with Icon 1`] = `
<View
  className="flex items-start"
>
  <View
    accessibilityLabel="Action"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="overflow-hidden flex items-center gap-1 rounded-full border border-solid border-f0-border px-2 py-0.5 grow-0 pl-1.5"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <View
      className="absolute inset-0"
      pointerEvents="none"
      style={
        [
          {
            "opacity": 0,
          },
          {
            "backgroundColor": "rgba(0, 0, 0, 1)",
          },
        ]
      }
    />
    <View
      className="flex flex-row items-center gap-0.5"
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="100%"
        bbWidth="100%"
        className="shrink-0 w-4 h-4 stroke-sm font-medium text-f0-foreground"
        fill="none"
        focusable={false}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            [
              {},
            ],
            {
              "flex": 0,
              "height": "100%",
              "width": "100%",
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M12.463 3.012A9 9 0 0 1 21 12l-.012.463A9 9 0 0 1 12 21l-.463-.012a9 9 0 0 1-8.525-8.525L3 12a9 9 0 0 1 9-9zM7.586 17.686A7.17 7.17 0 0 0 12 19.2a7.17 7.17 0 0 0 4.413-1.514L12 13.272zm-1.273-10.1A7.17 7.17 0 0 0 4.8 12c0 1.664.565 3.194 1.513 4.413L10.726 12zm6.959 4.413 4.414 4.414A7.17 7.17 0 0 0 19.2 12a7.17 7.17 0 0 0-1.514-4.414zM12 4.8a7.17 7.17 0 0 0-4.414 1.513l4.413 4.413 4.414-4.413A7.17 7.17 0 0 0 12 4.8"
            fill={
              {
                "type": 2,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <Text
        className="font-medium text-f0-foreground"
      >
        label
      </Text>
    </View>
  </View>
</View>
`;

exports[`OneChip Snapshot with OnClose 1`] = `
<View
  className="flex items-start"
>
  <View
    accessibilityLabel="Action"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="overflow-hidden flex items-center gap-1 rounded-full border border-solid border-f0-border px-2 py-0.5 grow-0 pr-1.5"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <View
      className="absolute inset-0"
      pointerEvents="none"
      style={
        [
          {
            "opacity": 0,
          },
          {
            "backgroundColor": "rgba(0, 0, 0, 1)",
          },
        ]
      }
    />
    <View
      className="flex flex-row items-center gap-0.5"
    >
      <Text
        className="font-medium text-f0-foreground"
      >
        label
      </Text>
      <View
        accessibilityLabel="Close"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        className="-m-1 flex h-6 w-6 cursor-pointer items-center justify-center rounded-full [&_svg]:text-f0-icon-secondary"
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight="100%"
          bbWidth="100%"
          className="shrink-0 w-4 h-4 stroke-sm font-medium text-f0-foreground"
          fill="none"
          focusable={false}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              [
                {},
              ],
              {
                "flex": 0,
                "height": "100%",
                "width": "100%",
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
              ]
            }
          >
            <RNSVGPath
              d="M12 3a9 9 0 1 1 0 18 9 9 0 0 1 0-18m3.637 5.364a.9.9 0 0 0-1.273 0L12 10.727 9.637 8.364a.9.9 0 0 0-1.273 1.272L10.728 12l-2.364 2.364a.9.9 0 1 0 1.273 1.272L12 13.273l2.364 2.363a.9.9 0 0 0 1.273-1.272L13.273 12l2.364-2.364a.9.9 0 0 0 0-1.272"
              fill={
                {
                  "type": 2,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
</View>
`;
